--- a/package.json
+++ b/package.json
@@ -29,12 +29,20 @@
     "@ionic-native/status-bar": "4.8.0",
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "2.1.3",
+    "cordova-android": "7.0.0",
+    "cordova-browser": "5.0.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
+    "underscore": "^1.9.1",
     "zone.js": "0.8.26",
-    "cordova-browser": "5.0.3"
+    "cordova-plugin-whitelist": "1.3.3",
+    "cordova-plugin-device": "2.0.2",
+    "cordova-plugin-splashscreen": "5.0.2",
+    "cordova-plugin-ionic-webview": "1.1.19",
+    "cordova-plugin-ionic-keyboard": "2.0.5",
+    "cordova-plugin-geolocation": "~4.0.1"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.10",
@@ -45,10 +53,16 @@
     "plugins": {
       "cordova-plugin-geolocation": {
         "GEOLOCATION_USAGE_DESCRIPTION": "Para localizar você"
-      }
+      },
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {}
     },
     "platforms": [
-      "browser"
+      "browser",
+      "android"
     ]
   }
 }
