--- a/package.json
+++ b/package.json
@@ -31,18 +31,19 @@
     "@ionic/storage": "2.1.3",
     "cordova-android": "7.0.0",
     "cordova-browser": "5.0.3",
+    "cordova-ios": "4.5.4",
+    "cordova-plugin-device": "2.0.2",
+    "cordova-plugin-geolocation": "~4.0.1",
+    "cordova-plugin-ionic-keyboard": "2.0.5",
+    "cordova-plugin-ionic-webview": "1.1.19",
+    "cordova-plugin-splashscreen": "5.0.2",
+    "cordova-plugin-whitelist": "1.3.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "underscore": "^1.9.1",
-    "zone.js": "0.8.26",
-    "cordova-plugin-whitelist": "1.3.3",
-    "cordova-plugin-device": "2.0.2",
-    "cordova-plugin-splashscreen": "5.0.2",
-    "cordova-plugin-ionic-webview": "1.1.19",
-    "cordova-plugin-ionic-keyboard": "2.0.5",
-    "cordova-plugin-geolocation": "~4.0.1"
+    "zone.js": "0.8.26"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.10",
@@ -62,7 +63,8 @@
     },
     "platforms": [
       "browser",
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
